css/styles.css
body{
    padding-top: 60px;
    padding-bottom: 40px;
}
.sidebar-nav{
    padding: 9px 0;
}

@media (max-width: 980px) {
    /* Enable use of floated navbar text */
    .navbar-text.pull-right {
        float: none;
        padding-left: 5px;
        padding-right: 5px;
    }
}

.form-signin {
    max-width: 300px;
    padding: 19px 29px 29px;
    margin: 0 auto 20px;
    background-color: #fff;
    border: 1px solid #e5e5e5;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
    -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
    box-shadow: 0 1px 2px rgba(0,0,0,.05);
}
.form-signin .form-signin-heading,
.form-signin .checkbox {
    margin-bottom: 10px;
}
.form-signin input[type="text"],
.form-signin input[type="password"] {
    font-size: 16px;
    height: auto;
    margin-bottom: 15px;
    padding: 7px 9px;
}

.check-in-notes{
    width: 250px;
    height: 20px;
}

#contacts-list-tbl tr{
    cursor: pointer;
}

#button-row{
    margin: 20px 0 0 0;
}

#button-row button{margin: 5px 0;}

















/**
 *ContentEditable styles
*/
[contenteditable]:hover:after {
  content: ' click to edit';
  font-style: italic;
  font-size: 12px;
  font-family: sans-serif;
  color: #ccc;
  .text-stroke(0);
}

[contenteditable]:hover, [contenteditable]:focus {
  background: #FFFFD3;
}

[contenteditable]:focus {
/*  padding: 5px;*/
}

[contenteditable]:focus:after {
  content: '';
}
/**
 *End ContentEditable styles
*/

